# claude-code-but-not-coding

./: .gitignore  CLAUDE.md  claude_code_sdk_client.py  input.json  main.py  pyproject.toml  test_server.py
.claude/agents/: graphic-designer-pro.md
.claude/commands/: prcreative.md  video_creation.md
archive/20250928_151505/: article1_design_strategy.md  article1_thumbnail.html  article2_design_strategy.md  article2_thumbnail.html  article3_design_strategy.md  article3_thumbnail.html  final_output.json
archive/20250928_153150/: article1_design_strategy.md  article1_thumbnail.html  article2_design_strategy.md  article2_thumbnail.html  article3_design_strategy.md  article3_thumbnail.html  article3_thumbnail_square.html  final_output.json
archive/20250928_154610/: article1_design_strategy.md  article2_design_strategy.md  article3_design_strategy.md  claude_opus_thumbnail.html  claude_opus_thumbnail_square.html  final_output.json  manon_thumbnail_16x9.html  manon_thumbnail_1x1.html  manon_thumbnail_deliverables.md
archive/20250928_155904/: article1_design_strategy.md  article2_design_strategy.md  article3_16x9_overlay.html  (+3 more)
hooks/: basichooks.py
outputs/: article1_design_strategy.md  article1_thumbnail.html  article2_design_strategy.md  article2_thumbnail.html  article3_design_strategy.md  article3_thumbnail.html
prompts/: append_system_prompt.py  buzzPRTaskPrompt.py  buzzVideoPrompt.py  prompts.py
scripts/: deep_direction.py  nanobanana.py  take_screenshot_from_html.py  veo_3.py
sdk_mcp_server/: README.md  requirements.txt  server.py  test_integration.py
(+11 files in other folders)
