[project]
name = "chefofstaff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-code-sdk>=0.0.23",
    "google>=3.0.0",
    "google-genai>=1.38.0",
    "mcp[cli]>=1.14.1",
    "openai>=1.109.0",
    "pillow>=11.3.0",
    "playwright>=1.55.0",
    "pymongo>=4.15.1",
    "supabase>=2.20.0",
    "xai-sdk>=1.2.0",
]
